<resources>
    <string name="general_company_name">Wolox</string>
    <string name="general_app_name">Wolox News</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="action_settings">Settings</string>
    <string name="login_disclaimer">By joining you agree to our</string>
    <string name="login_tos"><u>Terms &amp; Conditions</u></string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_btn_login">LOG IN</string>
    <string name="login_btn_signup">SIGN UP</string>
    <string name="login_require_all">Every field is required</string>
    <string name="login_not_valid_email">Not a valid email address</string>
    <string name="login_wrong_credentials">Sorry… Please check your email and password and try again :)</string>
    <string name="login_unable_to_connect">Unable to connect to the server, try again later</string>
    <string name="progressdialog_connecting">Connecting…</string>
    <string name="login_welcome">Welcome!</string>
    <string name="signup_confirm_password">Confirm password</string>
    <string name="signup_join">JOIN</string>
    <string name="signup_passwords_dont_match">Passwords don\'t match</string>
    <string name="signup_invalid_username">Username unavailable, please choose another one</string>
    <string name="error_connection_unknown">Unknown connection error</string>
    <string name="fragment_news_name">NEWS</string>
    <string name="fragment_profile_name">PROFILE</string>
    <string name="signup_user_created">User created</string>
    <string name="fragment_news_no_news">There are no news to display\nWait a little bit and pull down to refresh</string>
    <string name="main_activity_session_expired">Session expired. Please Log In again</string>
</resources>
