<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blanco"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/img_cover_login"
        android:src="@drawable/coverlogin"
        android:scaleType="centerCrop" />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".loginActivity">

        <include
            layout="@layout/tos_disclaimer"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/img_logo_login"
                android:src="@drawable/loginlogo"
                android:scaleType="fitCenter" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/guideline_editText"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/et_email"
                android:hint="@string/login_email"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/guideline_editText"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/et_password"
                android:hint="@string/login_password"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/guideline_boton"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/login_btn_login"
                android:id="@+id/btn_login"
                android:background="@drawable/btn_regular"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/guideline_boton"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/login_btn_signup"
                android:id="@+id/btn_signup"
                android:background="@drawable/btn_azul"
                android:textColor="@color/blanco"/>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
